--- a/index.html
+++ b/index.html
@@ -4,7 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TASBIH</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css" rel="stylesheet" type="text/css" />
+<script src="https://cdn.tailwindcss.com"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+<style>
+    *{
+        font-family: 'Lato', sans-serif;
+    }
+</style>
 </head>
-<body>
+<body class="max-w-screen-2xl mx-auto">
+    <section>
+        <h1 class="font-black text-center text-5xl text-orange-600 w-100% mt-40 lg:text-7xl" >DIGITAL TASBIH</h1>       
+    </section>
+    <section class="grid mt-40 gap-8  md:grid md:grid-cols-2 lg:flex lg:justify-center">
+        <div class="card bg-base-100 shadow-xl">
+            <div class="card-body items-center text-center">
+              <h2 class="card-title"></h2>
+              <p>0</p>
+              <div class="card-actions">
+                <button class="btn text-white text-base font-bold bg-orange-600 ">increment</button>
+                <button class="btn text-black text-base font-bold bg-orange-200">Decrement</button>
+              </div>
+            </div>
+          </div>
+          <div class="card bg-base-100 shadow-xl">
+    
+            <div class="card-body items-center text-center">
+              <h2 class="card-title"></h2>
+              <p>0</p>
+              <div class="card-actions">
+                <button class="btn text-white text-base font-bold bg-orange-600 ">increment</button>
+                <button class="btn text-black text-base font-bold bg-orange-200">Decrement</button>
+              </div>
+            </div>
+          </div>
+          <div class="card bg-base-100 shadow-xl">
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">S</h2>
+              <p>0</p>
+              <div class="card-actions">
+                <button class="btn text-white text-base font-bold bg-orange-600 ">increment</button>
+                <button class="btn text-black text-base font-bold bg-orange-200">Decrement</button>
+              </div>
+            </div>
+          </div>
+    </section>
 </body>
 </html>
