--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
               <h2 class="card-title font-bold text-3xl mb-9">SUBHANALLAH</h2>
               <p class="text-4xl mb-9 font-extrabold" id="subhanallahvalue">0</p>
               <div class="card-actions">
-                <button class="btn text-white text-base font-bold bg-orange-600 " id="allhamdulillahBtn">increment</button>
+                <button class="btn text-white text-base font-bold bg-orange-600 " id="subanallahBtn">increment</button>
                 <button class="btn text-black text-base font-bold bg-orange-200" id="Decrement2">Decrement</button>
               </div>
             </div>
           </div>
           <div class="card bg-base-100 shadow-xl">
             <div class="card-body items-center text-center">
-              <h2 class="card-title font-bold text-3xl mb-9" id="allahakbarvalue">ALLAHUAKBAR</h2>
-              <p class="text-4xl mb-9 font-extrabold">0</p>
+              <h2 class="card-title font-bold text-3xl mb-9" >ALLAHUAKBAR</h2>
+              <p class="text-4xl mb-9 font-extrabold"id="allahakbarvalue">0</p>
               <div class="card-actions">
                 <button class="btn text-white text-base font-bold bg-orange-600 " id="allahuakbarBtn">increment</button>
                 <button class="btn text-black text-base font-bold bg-orange-200" id="Decrement3">Decrement</button>
