--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
           </div>
     </section>
-   <section class="flex justify-center my-6"> <button class="btn 
+   <section class="flex justify-center mt-24"> <button class="btn 
     text-white font-bold bg-orange-600 shadow-xl" id="ResetBtn">Reset All</button></section>
     <script src="/script.js"></script>
 </body>
