--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,6 +55,6 @@
     </section>
    <section class="flex justify-center mt-24"> <button class="btn 
     text-white font-bold bg-orange-600 shadow-xl" id="ResetBtn">Reset All</button></section>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
