--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="card bg-base-100 shadow-xl">
     
             <div class="card-body items-center text-center">
-              <h2 class="card-title font-bold text-3xl mb-9">SUBHANALLAH</h2>
+              <h2 class="card-title font-bold text-3xl mb-9">SUBHAN-ALLAH</h2>
               <p class="text-4xl mb-9 font-extrabold" id="subhanallahvalue">0</p>
               <div class="card-actions">
                 <button class="btn text-white text-base font-bold bg-orange-600 " id="subanallahBtn">increment</button>
@@ -44,7 +44,7 @@
           </div>
           <div class="card bg-base-100 shadow-xl">
             <div class="card-body items-center text-center">
-              <h2 class="card-title font-bold text-3xl mb-9" >ALLAHUAKBAR</h2>
+              <h2 class="card-title font-bold text-3xl mb-9" >ALLAHU-AKBAR</h2>
               <p class="text-4xl mb-9 font-extrabold"id="allahakbarvalue">0</p>
               <div class="card-actions">
                 <button class="btn text-white text-base font-bold bg-orange-600 " id="allahuakbarBtn">increment</button>
@@ -53,7 +53,7 @@
             </div>
           </div>
     </section>
-   <section class="flex justify-center mt-24"> <button class="btn 
+   <section class="flex justify-center my-24"> <button class="btn 
     text-white font-bold bg-orange-600 shadow-xl" id="ResetBtn">Reset All</button></section>
     <script src="./script.js"></script>
 </body>
