--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </head>
 <body class="max-w-screen-2xl mx-7 lg:mx-auto">
     <section>
-        <h1 class="font-black text-center text-4xl text-orange-600 w-100% mt-40 lg:text-7xl" >DIGITAL TASBIH</h1>       
+        <h1 class="font-black text-center text-4xl text-orange-600 w-100% mt-10 lg:mt-40 lg:text-7xl" >DIGITAL TASBIH</h1>       
     </section>
-    <section class="grid mt-32 gap-8  md:grid md:grid-cols-2 lg:flex lg:justify-center">
+    <section class="grid mt-10 lg:mt-32 gap-10  lg:flex lg:justify-center">
         <div class="card bg-base-100 shadow-xl">
             <div class="card-body items-center text-center">
               <h2 class="card-title font-bold text-3xl mb-9">ALLHAMDULLAH</h2>
